Added validation for each route, and updated api docs.
